[gd_scene load_steps=9 format=2]

[ext_resource path="res://user-project/multiplayer/lobby.gd" type="Script" id=1]
[ext_resource path="res://user-project/audio/background/main.ogg" type="AudioStream" id=2]
[ext_resource path="res://user-project/UI/background.png" type="Texture" id=3]
[ext_resource path="res://user-project/UI/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://user-project/Nunito/Nunito-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://user-project/levels/LevelSelect.tscn" type="PackedScene" id=7]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 6 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enable = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TitleBox" type="Panel" parent="."]
anchor_left = 0.26
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.675
anchor_top = 0.5
anchor_right = 0.775
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -177.5
margin_right = 126.0
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="List" type="ItemList" parent="Players"]
anchor_left = 0.1
anchor_top = 0.125
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="FindPublicIP" type="Label" parent="Players"]
margin_left = 1.5
margin_top = -50.5
margin_right = 245.5
margin_bottom = -1.5
custom_fonts/font = SubResource( 1 )
text = "IP: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.45
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 55.0
margin_top = -108.0
margin_right = 455.0
margin_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="NameLabel" type="Label" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.2
grow_horizontal = 2
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Name:"
align = 3
valign = 3

[node name="IPLabel" type="Label" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "IP:"
align = 1
valign = 1

[node name="StartBox" type="Panel" parent="Connect"]
anchor_left = 0.125
anchor_top = 0.25
anchor_right = 0.875
anchor_bottom = 0.25
margin_top = 5.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="Name" type="LineEdit" parent="Connect/StartBox"]
margin_right = 200.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "Player"

[node name="Host" type="Button" parent="Connect/StartBox"]
anchor_left = 0.75
anchor_right = 1.0
margin_top = 2.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 105.2
margin_top = 189.0
margin_right = 347.2
margin_bottom = 203.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="JoinBox" type="Panel" parent="Connect"]
anchor_left = 0.125
anchor_top = 0.7
anchor_right = 0.875
anchor_bottom = 0.7
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="IPAddress" type="LineEdit" parent="Connect/JoinBox"]
margin_right = 200.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Join" type="Button" parent="Connect/JoinBox"]
anchor_left = 0.75
anchor_right = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="LevelSelect" parent="." instance=ExtResource( 7 )]

[node name="Node" type="Node" parent="."]

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/StartBox/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/JoinBox/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="LevelSelect/Popup/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="LevelSelect/Popup/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="LevelSelect/Popup/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="LevelSelect/Popup/Level4" to="." method="_on_Level4_pressed"]

[editable path="LevelSelect"]
